# MyMediaServer

./: CMakeLists.txt  README.md  main.cpp  media.db  package-lock.json  package.json  server.js
public/styles/: main.css
views/: index.html
views/add/: add.html
